Created makefile, adjusted dockerfile to use makefile, added version endpoint, added cobra integration
